# myGame

./: .gitignore  CMakeLists.txt  README.MD  makefile  setting.ini
src/: LTexture.cpp  base.cpp  button.cpp  character.cpp  fireball.cpp  main.cpp  music.cpp
src/include/: LTexture.h  base.h  button.h  character.h  circle.h  elements.h  fireball.h  music.h  properties.h
